Ejercicios del 11 al 17, se arreglaron incovenientes con los ejercicios 1 y 2

--- a/html/ejercicio10.html
+++ b/html/ejercicio10.html
@@ -17,6 +17,6 @@
 </head>
 <body>
     <h2>Ejercicio 10</h2>
-    <p>Este script determina el promedio entre 3 números ingresados por el ususario.</p>
+    <p>Este script determina el promedio entre 3 números ingresados por el usuario.</p>
 </body>
 </html>
