Finalización del trabajo

--- a/html/ejercicio23.html
+++ b/html/ejercicio23.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Ejercicio 23 - Radio en tiempo real</title>
+    <title>Ejercicio 23</title>
     <style>
         body {
             font-family: Arial, sans-serif;
